--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite --host",
+        "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview"
@@ -13,7 +13,6 @@
         "dayjs": "^1.11.13",
         "i18next": "^24.2.2",
         "i18next-browser-languagedetector": "^8.0.2",
-        "i18next-http-backend": "^3.0.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
