--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
-        "react-router-dom": "^7.1.2"
+        "react-router-dom": "^7.1.2",
+        "react-router-hash-link": "^2.4.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
