--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "i18next-browser-languagedetector": "^8.0.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-helmet": "^6.1.0",
         "react-i18next": "^15.4.0",
         "react-router-dom": "^7.1.2",
         "react-router-hash-link": "^2.4.3"
