--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-    "name": "prozubik",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "dayjs": "^1.11.13",
-        "i18next": "^24.2.2",
-        "i18next-browser-languagedetector": "^8.0.2",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-helmet": "^6.1.0",
-        "react-i18next": "^15.4.0",
-        "react-router-dom": "^7.1.2",
-        "react-router-hash-link": "^2.4.3"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.17.0",
-        "@types/react": "^18.3.18",
-        "@types/react-dom": "^18.3.5",
-        "@vitejs/plugin-react": "^4.3.4",
-        "eslint": "^9.17.0",
-        "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^5.0.0",
-        "eslint-plugin-react-refresh": "^0.4.16",
-        "globals": "^15.14.0",
-        "vite": "^6.0.5"
-    }
+	"name": "prozubik",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite --host",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"dayjs": "^1.11.13",
+		"i18next": "^24.2.2",
+		"i18next-browser-languagedetector": "^8.0.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-helmet": "^6.1.0",
+		"react-i18next": "^15.4.0",
+		"react-router-dom": "^7.1.2",
+		"react-router-hash-link": "^2.4.3"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.17.0",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.17.0",
+		"eslint-plugin-react": "^7.37.2",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-refresh": "^0.4.16",
+		"globals": "^15.14.0",
+		"vite": "^6.0.5"
+	}
 }
